# PaddleX

./: .check_license.py  .gitignore  .gitmodules  .pre-commit-config.yaml  FAQ.md  LICENSE  README.md  README_CN.md  README_EN.md  README_cn.md  README_en.md  README_zh.md  bbox.json  check.csv  check_links.py  commit-prepare.sh  install_pdx.py  main.py  mask.json  requirements.txt  serving_requirements.txt  setup.py  ts_fc.csv
deploy/cpp/demo/onnx_openvino/: CMakeLists.txt  model_infer.cpp
deploy/cpp/demo/triton/: CMakeLists.txt  model_infer.cpp
deploy/cpp/docs/qt_deploy/: CMakeLists.txt  README.md  model_infer.cpp
deploy/cpp/docs/qt_deploy/qt_demo/: infer_thread.cpp  infer_thread.h  mainwindow.cpp  mainwindow.h
deploy/cpp/tools/build_pipeline/: CMakeLists.txt
deploy/encryption/: CMakeLists.txt  README  build.bat  build.sh  export_rule.map
deploy/encryption/include/: model_code.h  paddle_model_decrypt.h  paddle_model_encrypt.h
deploy/encryption/include/paddle/: paddle_analysis_config.h  paddle_api.h  paddle_mkldnn_quantizer_config.h  paddle_pass_builder.h
deploy/encryption/include/paddle/internal/: framework.pb.h
deploy/encryption/sample/: paddle_encrypt_tool.cpp
deploy/encryption/src/: CMakeLists.txt
deploy/encryption/src/constant/: constant_model.h
deploy/encryption/src/safeapi/: paddle_model_decrypt.cpp  paddle_model_encrypt.cpp
deploy/encryption/src/util/: io_utils.cpp  io_utils.h  log.h  system_utils.cpp  system_utils.h
deploy/encryption/src/util/crypto/: aes_gcm.cpp  base64.cpp  base64.h  base64_utils.cpp  base64_utils.h  sha256_utils.cpp  sha256_utils.h
deploy/openvino/: CMakeLists.txt  CMakeSettings.json  README.md
deploy/openvino/cmake/: yaml-cpp.cmake
deploy/openvino/demo/: classifier.cpp  detector.cpp  segmenter.cpp
deploy/openvino/include/paddlex/: paddlex.h  results.h  transforms.h  visualize.h
deploy/openvino/python/: converter.py  convertor.py  demo.py  deploy.py
deploy/openvino/python/transforms/: cls_transforms.py  det_transforms.py  ops.py  seg_transforms.py
deploy/openvino/python/utils/: __init__.py  logging.py
deploy/openvino/scripts/: build.sh  install_third-party.sh
deploy/openvino/src/: classifier.cpp  paddlex.cpp  transforms.cpp
deploy/raspberry/: CMakeLists.txt  typescript
deploy/raspberry/cmake/: yaml-cpp.cmake
deploy/raspberry/demo/: classifier.cpp  detector.cpp  segmenter.cpp
deploy/raspberry/include/paddlex/: config_parser.h  paddlex.h  results.h  transforms.h
deploy/raspberry/python/: convertor.py  demo.py  deploy.py
deploy/raspberry/python/transforms/: __init__.py  cls_transforms.py  det_transforms.py  ops.py
deploy/raspberry/scripts/: build.sh  install_third-party.sh
deploy/raspberry/src/: paddlex.cpp  transforms.cpp  visualize.cpp
docs/: FAQ.md  (+36 more)
dygraph/deploy/cpp/: CMakeLists.txt  CMakeSettings.json  README.md
dygraph/deploy/cpp/demo/: CMakeLists.txt  batch_infer.cpp  decrypt_infer.cpp  infer.cpp  model_infer.cpp  multi_gpu_infer.cpp  multi_gpu_model_infer.cpp  tensorrt_infer.cpp
dygraph/deploy/cpp/demo/onnx_openvino/: CMakeLists.txt  model_infer.cpp
dygraph/deploy/cpp/demo/onnx_tensorrt/: CMakeLists.txt  model_infer.cpp
dygraph/deploy/cpp/demo/onnx_triton/: CMakeLists.txt  model_infer.cpp
dygraph/deploy/cpp/demo/paddle/: CMakeLists.txt  model_infer.cpp  multi_gpu_model_infer.cpp
dygraph/deploy/cpp/docs/apis/: model.md  yaml.md
dygraph/deploy/cpp/docs/compile/paddle/: jetson.md  linux.md  windows.md
dygraph/deploy/cpp/docs/demo/: decrypt_infer.md  model_infer.md  multi_gpu_model_infer.md  tensorrt_infer.md
dygraph/deploy/cpp/docs/manufacture_sdk/: README.md
dygraph/deploy/cpp/docs/models/: paddleclas.md  paddledetection.md  paddleseg.md  paddlex.md
dygraph/deploy/cpp/encryption/: CMakeLists.txt  README  README.md  build.bat  build.sh  build_clean.bat  export_rule.map
dygraph/deploy/cpp/encryption/include/: model_code.h  paddle_model_decrypt.h  paddle_model_encrypt.h  paddle_stream_decrypt.h
dygraph/deploy/cpp/encryption/sample/: paddle_encrypt_tool.cpp  paddle_safe_stream_test.cpp
dygraph/deploy/cpp/encryption/src/: CMakeLists.txt  paddle_model_decrypt.cpp  paddle_model_encrypt.cpp
dygraph/deploy/cpp/encryption/src/constant/: constant_model.h
dygraph/deploy/cpp/encryption/src/safeapi/: paddle_model_decrypt.cpp  paddle_model_encrypt.cpp  paddle_stream_decrypt.cpp
dygraph/deploy/cpp/encryption/src/util/: io_utils.h  log.h  system_utils.cpp  system_utils.h
dygraph/deploy/cpp/encryption/util/include/: io_utils.h  log.h
dygraph/deploy/cpp/encryption/util/src/: io_utils.cpp  system_utils.cpp
dygraph/deploy/cpp/model_deploy/common/include/: base_model.h  base_preprocess.h  deploy_delacre.h  model_factory.h  multi_gpu_model.h  paddle_deploy.h  transforms.h
dygraph/deploy/cpp/model_deploy/common/src/: base_preprocess.cpp  model_factory.cpp  transforms.cpp
dygraph/deploy/cpp/model_deploy/engine/include/: engine_config.h  openvino_engine.h  tensorrt_engine.h
dygraph/deploy/cpp/model_deploy/engine/src/: openvino_engine.cpp  ppinference_engine.cpp  tensorrt_engine.cpp  triton_engine.cpp
dygraph/deploy/cpp/model_deploy/paddlex/include/: x_model.h  x_preprocess.h  x_standard_config.h
dygraph/deploy/cpp/model_deploy/paddlex/src/: x_model.cpp
dygraph/deploy/cpp/model_deploy/ppclas/include/: clas_model.h
dygraph/deploy/cpp/model_deploy/ppclas/src/: clas_model.cpp  clas_postprocess.cpp  clas_preprocess.cpp
dygraph/deploy/cpp/model_deploy/ppdet/include/: det_postprocess.h
dygraph/deploy/cpp/model_deploy/ppdet/src/: det_model.cpp  det_postprocess.cpp
dygraph/deploy/cpp/model_deploy/ppseg/include/: seg_model.h  (+1 more)
dygraph/deploy/cpp/scripts/: bootstrap.sh  build.sh  build_lib.sh  tensorrt_build.sh  triton_build.sh  use_lib_build.sh
dygraph/deploy/cpp/scripts/onnx/: openvino_build.sh  tensorrt_build.sh
dygraph/deploy/cpp/tools/build_lib/: CMakeLists.txt
dygraph/deploy/cpp/tools/build_pipeline/: CMakeLists.txt  Config.cmake.in
dygraph/deploy/cpp/tools/use_lib/: CMakeLists.txt
dygraph/deploy/cpp/utils/build_lib/: CMakeLists.txt  Config.cmake.in
(+3513 files in other folders)
